# DistortionPro-audio-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
openspec/changes/audio-effect-plugin/: design.md  proposal.md  tasks.md
openspec/changes/audio-effect-plugin/specs/distortion-engine/: spec.md
openspec/changes/audio-effect-plugin/specs/plugin-formats/: spec.md
openspec/changes/audio-effect-plugin/specs/preset-system/: spec.md
openspec/changes/audio-effect-plugin/specs/visual-ui/: spec.md
presets/: british_crush.json  clean_boost.json  fuzzy_math.json  hard_rock.json  studio_warmth.json  vintage_overdrive.json
releases/: DistortionPro.vst3  README.md
resources/: .gitkeep
scripts/: build.bat  build.sh  install_vst2.bat  install_vst3_sdk.bat  package.sh
src/dsp/: DistortionAlgorithms.cpp  DistortionAlgorithms.h  DistortionProcessor.cpp  DistortionProcessor.h  Oversampler.cpp  Oversampler.h
src/plugin/: DistortionPro.cpp  DistortionPro.h  JuceWrapper.cpp
src/presets/: PresetManager.cpp  PresetManager.h
src/ui/: ABCompareComponent.cpp  ABCompareComponent.h  GainMeter.cpp  GainMeter.h  KnobComponent.cpp  KnobComponent.h  PluginEditor.cpp  PluginEditor.h  PresetSaveDialog.cpp  PresetSaveDialog.h  TypeSelector.cpp  TypeSelector.h  WaveformDisplay.cpp  WaveformDisplay.h
tests/: DistortionAlgorithmTests.cpp  PerformanceTests.cpp  SimpleTest.cpp
vst2sdk/pluginterfaces/vst2.x/: vstfxstore.h
